--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/classnames": "^2.2.10",
+    "classnames": "^2.2.6",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
@@ -37,11 +39,11 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.152",
+    "cypress": "^4.8.0",
     "prettier": "2.0.5"
   },
   "prettier": {
     "tabWidth": 4,
     "singleQuote": true
-  },
-  "proxy": "https://still-inlet-67918.herokuapp.com/"
+  }
 }
