--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:ci": "serve -p 3000 -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -40,7 +41,9 @@
   "devDependencies": {
     "@types/lodash": "^4.14.152",
     "cypress": "^4.8.0",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "serve": "^11.3.2",
+    "wait-on": "^5.0.1"
   },
   "prettier": {
     "tabWidth": 4,
